css: updated the font for the creator

--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,8 @@
   h5,
   h6,
   button,
-  [role="tab"] {
+  [role="tab"],
+  [role="creator"] {
     font-family: 'ProtoMono', monospace;
   }
 
